--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="home-text">
         <span>Hello, I'm</span>
-        <h1>Nilkant Gunjote</h1>
+        <h1>Aman Rathod</h1>
         <h2>Frontend Developer</h2>
         <p>Looking Forward to work with the company, which provides 
             opportunities to enhance my skills 
